LPS-153032 Change style to fix dropdown width and align collapsble side box

--- a/modules/apps/object/object-web/src/main/resources/META-INF/resources/js/components/Layout/LayoutScreen/LayoutScreen.scss
+++ b/modules/apps/object/object-web/src/main/resources/META-INF/resources/js/components/Layout/LayoutScreen/LayoutScreen.scss
@@ -51,6 +51,10 @@ $bgColor: #f7f8f9;
 	}
 }
 
+.dropdown-menu {
+	width: fit-content;
+}
+
 .box-btn-columns {
 	display: flex;
 
