--- a/modules/apps/object/object-web/src/main/resources/META-INF/resources/js/components/Panel/Panel.scss
+++ b/modules/apps/object/object-web/src/main/resources/META-INF/resources/js/components/Panel/Panel.scss
@@ -45,6 +45,10 @@ $bgColor: #fff;
 		&__content-right {
 			align-items: center;
 			display: flex;
+
+			.simple-toggle-switch.toggle-switch {
+				display: contents;
+			}
 		}
 	}
 
